--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -28,7 +28,14 @@
         },
         {
             "files": "*.js",
-            "options": {}
+            "options": {
+                "printWidth": 40,
+                "tabWidth": 2,
+                "useTabs": false,
+                "singleQuote": true,
+                "bracketSpacing": false,
+                "formatOnSave": true
+            }
         },
         {
             "files": "*.ts",
