--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "minimist": "^1.2.8"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
     "@typechain/hardhat": "^9.1.0",
     "@types/minimist": "^1.2.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "web3": "^4.11.1"
   }
 }
